Changed help button appearance

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </a>  
     </div>
   </div>
-  <button id="helpButton" onclick="displayHelp()"><strong>Jak grać?</strong></button>
+  <button id="helpButton" onclick="displayHelp()"><strong>?</strong></button>
 
   <div id="helpModal" class="modal">
     <div class="modal-content">
