--- a/set1.html
+++ b/set1.html
@@ -23,7 +23,7 @@
       <button style="display: none;" id="next-question-button">Następne pytanie</button>
     </a>
   </div>
-  <button id="helpButton" onclick="displayHelp()"><strong>Jak grać?</strong></button>
+  <button id="helpButton" onclick="displayHelp()"><strong>?</strong></button>
 
   <div id="helpModal" class="modal">
     <div class="modal-content">
