--- a/set2.html
+++ b/set2.html
@@ -20,7 +20,7 @@
       <div id="feedback"></div>
     </div>
   </div>
-  <button id="helpButton" onclick="displayHelp()"><strong>Jak grać?</strong></button>
+  <button id="helpButton" onclick="displayHelp()"><strong>?</strong></button>
 
   <div id="helpModal" class="modal">
     <div class="modal-content">
