Dodałem przekazany "z góry" materiał do danych strony

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
         <img src="media/foska-przemyska-z-napisem-300px.png" id="foska" >
     </a>
   <div id="wrap">
-    <h1 id="punkt">🔍 Gra Terenowa</h1>
-    <p style="text-align:center;">Witaj! Przed Tobą seria pytań i zagadek, które poprowadzą Cię przez kolejne punkty trasy.</p>
+    <h1 id="punkt">ALLELUJA!</h1>
+    <p style="text-align:center;">Witaj drogi podróżniku, jeżeli chcesz odnaleźć skarb Ruchu Światło-Życie to podejmij ten wysiłek i podążaj drogą nowego człowieka.</p>
+    <p style="text-align:center;">Po rozpoczęciu wyprawy otrzymasz wskazówkę, dzięki której dotrzesz do pierwszej z pięciu stacji. Wypatruj kodów QR, aby odbierać coraz to nowsze wskazówki, które zaprowadzą cię do celu. Pamiętaj, że wskazówki mogą być ukryte, niedostrzegalne dla zwykłego oka przechodnia.</p>
+    <p style="text-align:center;">Masz już wszystkie podstawowe informacje, więc teraz ruszaj. Weź ze sobą znajomych, żeby umilić czas podróży.</p>
+    <p style="text-align:center;"><strong>POWODZENIA!!!</strong></p>
     <div style="text-align: center; margin-top: 30px;">
       <a href="set1.html">
         <button>Start</button>
