--- a/set1.html
+++ b/set1.html
@@ -12,16 +12,13 @@
     <img src="media/foska-przemyska-z-napisem-300px.png" id="foska" >
   </a>
   <div id="wrap">
-    <h1 id="punkt">Punkt 1</h1>
+    <h1 id="punkt">Stacja 1</h1>
     <div id="question-box">
       <p id="question"></p>
       <input type="text" id="answer" placeholder="Wpisz odpowiedź..." />
       <button onclick="checkAnswer()" id="checkAnswer">Sprawdź odpowiedź</button>
       <div id="feedback"></div>
     </div>
-    <a href="set2.html">
-      <button style="display: none;" id="next-question-button">Następne pytanie</button>
-    </a>
   </div>
   <button id="helpButton" onclick="displayHelp()"><strong>?</strong></button>
 
