--- a/set1.html
+++ b/set1.html
@@ -20,7 +20,10 @@
       <div id="feedback"></div>
     </div>
   </div>
+
   <button id="helpButton" onclick="displayHelp()"><strong>?</strong></button>
+  
+  <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1280.4777695148732!2d22.22894501266219!3d50.068394295496255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473cee7f3d341a33%3A0xc72fe4dd94a3dfba!2zMzctMTAwIMWBYcWEY3V0!5e0!3m2!1spl!2spl!4v1744879655607!5m2!1spl!2spl" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade" loading="lazy"></iframe>
 
   <div id="helpModal" class="modal">
     <div class="modal-content">
@@ -30,7 +33,9 @@
       </ul>
     </div>
   </div>
-  
+
   <script src="index.js"></script>
 </body>
 </html>
+
+
