--- a/set1.html
+++ b/set1.html
@@ -2,15 +2,17 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>SMAP 2025 Gra Terenowa</title>
   <link rel="icon" href="media/foska-przemyska-100px.png">
   <link rel="stylesheet" href="index.css">
 </head>
 <body data-site-id="q1">
+  <div class="header">
   <a href="https://oaza.przemyska.pl/oazywakacyjne-zapisy/">
     <img src="media/foska-przemyska-z-napisem-300px.png" id="foska" >
   </a>
+  </div>
   <div id="wrap">
     <h1 id="punkt">Stacja 1</h1>
     <div id="question-box">
@@ -22,9 +24,9 @@
   </div>
 
   <button id="helpButton" onclick="displayHelp()"><strong>?</strong></button>
-  
-  <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1280.4777695148732!2d22.22894501266219!3d50.068394295496255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473cee7f3d341a33%3A0xc72fe4dd94a3dfba!2zMzctMTAwIMWBYcWEY3V0!5e0!3m2!1spl!2spl!4v1744879655607!5m2!1spl!2spl" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade" loading="lazy"></iframe>
-
+  <div id="map">
+    <iframe id="map img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1280.4777695148732!2d22.22894501266219!3d50.068394295496255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473cee7f3d341a33%3A0xc72fe4dd94a3dfba!2zMzctMTAwIMWBYcWEY3V0!5e0!3m2!1spl!2spl!4v1744879655607!5m2!1spl!2spl" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade" loading="lazy"></iframe>
+  </div>
   <div id="helpModal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="document.getElementById('helpModal').style.display='none'">&times;</span>
