--- a/set1.html
+++ b/set1.html
@@ -18,7 +18,9 @@
     <div id="question-box">
       <p id="question"></p>
       <input type="text" id="answer" placeholder="Wpisz odpowiedź..." />
+      <div id="buttonHolder">
       <button onclick="checkAnswer()" id="checkAnswer">Sprawdź odpowiedź</button>
+      </div>
       <div id="feedback"></div>
     </div>
   </div>
