--- a/set3.html
+++ b/set3.html
@@ -16,14 +16,16 @@
     <div id="question-box">
       <p id="question"></p>
       <input type="text" id="answer" placeholder="Wpisz odpowiedź..." />
-      <button onclick="checkAnswer()" id="checkAnswer">Sprawdź odpowiedź</button>
+      <div id="buttonHolder">
+        <button onclick="checkAnswer()" id="checkAnswer">Sprawdź odpowiedź</button>
+      </div>
       <div id="feedback"></div>
     </div>
   </div>
   <button id="helpButton" onclick="displayHelp()"><strong>?</strong></button>
-
-  <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1280.4777695148732!2d22.22894501266219!3d50.068394295496255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473cee7f3d341a33%3A0xc72fe4dd94a3dfba!2zMzctMTAwIMWBYcWEY3V0!5e0!3m2!1spl!2spl!4v1744879655607!5m2!1spl!2spl" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade" loading="lazy"></iframe>
-
+  <div id="divmap">
+    <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2551.0212731943784!2d22.420219711856998!3d50.25418697143671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNTDCsDE1JzE1LjEiTiAyMsKwMjUnMjIuMSJF!5e0!3m2!1spl!2spl!4v1745437297881!5m2!1spl!2spl" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade" loading="lazy"></iframe>
+  </div>
   <div id="helpModal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="document.getElementById('helpModal').style.display='none'">&times;</span>
