fixed map on index.html

--- a/set4.html
+++ b/set4.html
@@ -22,6 +22,9 @@
       <div id="feedback"></div>
     </div>
   </div>
+  <div id="divmap">
+    <img src="NULL" id="map">
+  </div>
   <button id="helpButton" onclick="displayHelp()"><strong>?</strong></button>
   <div id="helpModal" class="modal">
     <div class="modal-content">
