--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </div>
   <div id="divmap">
-    <iframe id="map" src="map" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade" loading="lazy"></iframe> <!-- TODO: zmienić na pinezkę -->
+    <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2551.003229525498!2d22.420369711856956!3d50.25452397143666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNTDCsDE1JzE2LjMiTiAyMsKwMjUnMjIuNiJF!5e0!3m2!1spl!2spl!4v1745437202240!5m2!1spl!2spl" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade" loading="lazy"></iframe> <!-- TODO: zmienić na pinezkę -->
   </div>
   <button id="helpButton" onclick="displayHelp()"><strong>?</strong></button>
 
