Added Jesus to statnion 4 and help changed from /oazywakacyjne-zapisy/ to przemyska.pl

--- a/agHi98jg.html
+++ b/agHi98jg.html
@@ -9,7 +9,7 @@
 </head>
 <body data-site-id="q1">
   <div class="header">
-  <a href="https://oaza.przemyska.pl/oazywakacyjne-zapisy/">
+  <a href="https://oaza.przemyska.pl">
     <img src="media/foska-przemyska-z-napisem-300px.png" id="foska" >
   </a>
   </div>
