--- a/diuhg8hujgHJ.html
+++ b/diuhg8hujgHJ.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body data-site-id="q4">
-  <a href="https://oaza.przemyska.pl/oazywakacyjne-zapisy/">
+  <a href="https://oaza.przemyska.pl">
     <img src="media/foska-przemyska-z-napisem-300px.png" id="foska" >
   </a>
   <div id="wrap">
@@ -23,7 +23,7 @@
     </div>
   </div>
   <div id="divmap">
-    <img src="NULL" id="map">
+    <img src="media/Jezus.jpg" id="map">
   </div>
   <button id="helpButton" onclick="displayHelp()"><strong>?</strong></button>
   <div id="helpModal" class="modal">
