--- a/cGeifhi657h.html
+++ b/cGeifhi657h.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body data-site-id="q3">
-  <a href="https://oaza.przemyska.pl/oazywakacyjne-zapisy/">
+  <a href="https://oaza.przemyska.pl">
     <img src="media/foska-przemyska-z-napisem-300px.png" id="foska" >
   </a>
   <div id="wrap">
