Added passwords; Changed help again; Added station titles

--- a/agHi98jg.html
+++ b/agHi98jg.html
@@ -14,7 +14,7 @@
   </a>
   </div>
   <div id="wrap">
-    <h1 id="punkt">Stacja 1</h1>
+    <h1 id="punkt">Stacja 1 - PRZYJĘCIE</h1>
     <div id="question-box">
       <p id="question"></p>
       <input type="text" id="answer" placeholder="Wpisz odpowiedź..." />
