--- a/diuhg8hujgHJ.html
+++ b/diuhg8hujgHJ.html
@@ -12,7 +12,7 @@
     <img src="media/foska-przemyska-z-napisem-300px.png" id="foska" >
   </a>
   <div id="wrap">
-    <h1 id="punkt">Stacja 4</h1>
+    <h1 id="punkt">Stacja 4 - WSPÓLNOTA</h1>
     <div id="question-box">
       <p id="question"></p>
       <input type="text" id="answer" placeholder="Wpisz odpowiedź..." />
